# news-chatbot

./: Pipfile  README.md  abc_news_feed.csv  requirements.txt
news-chatbot/: .gitignore  Makefile  README.md  app.py  pyproject.toml  requirements.txt
news-chatbot/databases/news/: chroma.sqlite3
news-chatbot/databases/sample_news_vectorstore/: chroma.sqlite3
news-chatbot/docs/: mkdocs.yml
news-chatbot/docs/docs/: index.md
news-chatbot/notebooks/: chatbot2.ipynb  data_exploration.ipynb  data_exploration_preprocessing.ipynb  data_extraction_xml.ipynb  data_output.csv  data_storing_sample_code.ipynb  model_breaking_news_classifer.ipynb  similar_news.ipynb
news-chatbot/src/: highlights.py
news-chatbot/src/data/: chroma_data_pipeline.py  data_ingestion_api.py  data_ingestion_rss_feed.py  data_ingestion_scraping.py  data_prepocessing.py  data_preprocessing.py
news-chatbot/static/: styles.css
news-chatbot/templates/: index.html
